<resources>
    <string name="app_name">meetdemo</string>
    <string name="targetText">members</string>
    <string name="myText">self</string>
    <string name="muteMicText">静音</string>
    <string name="unMuteMicText">解除静音</string>
    <string name="disabledMicText">麦克风已禁用</string>
    <string name="openCamera">打开摄像头</string>
    <string name="closeCamera">关闭摄像头</string>
    <string name="changeCamera">翻转</string>
    <string name="shareScreen">分享屏幕</string>
    <string name="noShareScreen">取消分享</string>
    <string name="hangUpText">挂断</string>
    <string name="meetRoomCode">请输入房间号</string>
    <string name="meetNumber">请输入昵称</string>
    <string name="meetBackText">返回</string>
    <string name="meetCallText">立即进入</string>
</resources>