<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="roomProps"
            type="com.hw.mediasoup.vm.RoomProps" />

        <variable
            name="roomObserver"
            type="com.hw.meetdemo.databind.RoomObserver" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/dark_color"
        android:baselineAligned="false">

        <!--成员图像-->
        <LinearLayout
            android:id="@+id/memberParent"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:weightSum="10">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/x5"
                android:text="@string/targetText"
                android:textSize="@dimen/fontSize18"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/memberContainer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:visibility="gone" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/memberContainerRecycle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="none" />

        </LinearLayout>

        <!--自己图像-->
        <LinearLayout
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:weightSum="1"
                tools:ignore="UselessParent">

                <com.hw.mediasoup.view.MeView
                    android:id="@+id/meVideo"
                    android:layout_width="match_parent"
                    android:layout_height="0px"
                    android:layout_weight="1" />

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/x200"
                    android:layout_gravity="center">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical">

                        <!--静音-->
                        <Button
                            android:id="@+id/muteMic"
                            style="?android:attr/buttonStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/muteMicText"
                            android:visibility="@{roomObserver.muteMic ? View.GONE:View.VISIBLE}" />

                        <!--解除静音-->
                        <Button
                            android:id="@+id/unMuteMic"
                            style="?android:attr/buttonStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/unMuteMicText"
                            android:visibility="@{roomObserver.muteMic ? View.VISIBLE:View.GONE}" />

                        <!--麦克风已禁用-->
                        <Button
                            android:id="@+id/disabledMic"
                            style="?android:attr/buttonStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/disabledMicText"
                            android:visibility="@{roomObserver.disableMic ? View.VISIBLE:View.GONE}" />

                        <!--打开摄像头-->
                        <Button
                            android:id="@+id/openCamera"
                            style="?android:attr/buttonStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/openCamera"
                            android:visibility="@{roomObserver.openCamera ? View.VISIBLE:View.GONE}" />

                        <!--关闭摄像头-->
                        <Button
                            android:id="@+id/closeCamera"
                            style="?android:attr/buttonStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/closeCamera"
                            android:visibility="@{roomObserver.openCamera ? View.GONE:View.VISIBLE}" />

                        <!--翻转摄像头-->
                        <Button
                            android:id="@+id/changeCamera"
                            style="?android:attr/buttonStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/changeCamera" />

                        <!--分享屏幕-->
                        <Button
                            android:id="@+id/shareScreen"
                            style="?android:attr/buttonStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/shareScreen"
                            android:visibility="@{roomObserver.enableShare?View.GONE:View.VISIBLE}" />

                        <Button
                            android:id="@+id/noShareScreen"
                            style="?android:attr/buttonStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/noShareScreen"
                            android:visibility="@{roomObserver.enableShare?View.VISIBLE:View.GONE}" />

                        <!--挂断-->
                        <Button
                            android:id="@+id/hangUp"
                            style="?android:attr/buttonStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/hangUpText" />

                    </LinearLayout>

                </ScrollView>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</layout>